# AI-in-Time-Series

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
AI_in_Time_Series/: __init__.py
AI_in_Time_Series/data/: CustomDatatypes.py  SyntheticDatasets.py  __init__.py
AI_in_Time_Series/models/: __init__.py  base.py  odes.py  sklearn.py
AI_in_Time_Series/utils/: __init__.py  solvers.py
AI_in_Time_Series/visualization/: __init__.py  plotting.py
examples/: custom_datatypes.ipynb  synthetic_generation.ipynb
tests/utils/: test_CustomDatatypes.py  test_SyntheticDatasets.py
