[project]
name = "ai-in-time-series"
version = "0.1.0"
description = ""
authors = [
    {name = "amprod18",email = "martinezcuestaabraham@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchdiffeq (>=0.2.5,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ncps (>=1.0.1,<2.0.0)",
    "pandera (>=0.23.0,<0.24.0)",
    "pydot (>=3.0.4,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "deprecation (>=2.1.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
